--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,27 @@
-babel==2.9.0
+alembic==1.13.3
+Babel==2.9.0
+blinker==1.8.2
+click==8.1.7
+colorama==0.4.6
+Flask==3.0.3
+Flask-Migrate==4.0.7
+Flask-Moment==1.0.6
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.1.1
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+itsdangerous==2.2.0
+Jinja2==3.1.4
+Mako==1.3.5
+MarkupSafe==2.1.5
+packaging==24.1
+psycopg2==2.9.9
 python-dateutil==2.6.0
-flask-moment==1.0.6
-flask-wtf==1.2.1
-flask_sqlalchemy==3.1.1
-psycopg2
+pytz==2024.2
+six==1.16.0
+SQLAlchemy==2.0.35
+typing_extensions==4.12.2
+Werkzeug==3.0.4
+WTForms==3.1.2
+zipp==3.20.2
